--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.application.name=micro-service
 
 #\u6570\u636e\u6e90\u914d\u7f6e
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:ORCL
-spring.datasource.username=ls_gr
-spring.datasource.password=ls_gr
+spring.datasource.username=spj
+spring.datasource.password=spj
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.maxActive=20
 spring.datasource.initialSize=1
